--- a/development/todo.txt
+++ b/development/todo.txt
@@ -1,3 +1,12 @@
+- <meta> rename to acre: Assisted Code Review Evaluations
 - Jira ticket descriptions
 - semantic grouping
 - line-by-line deep dives
+- line-by-line approvals
+- filter-by-regex for review and approve line-by-line over one or all files
+
+...
+
+notes:
+
+- should the focus move from LOC to paraphrasing and building an understanding?
